19.12.1:
 * Made the tooltips more visible
 * Added a warning tooltip about missing multiplication signs
 * Sped up drawing of new cells correcting the size calculations
 * If lookalike chars are used in a way that can cause hard-to-find errors now a
   warning tooltip is generated
 * A few additional bug fixes that (besides others) resolve a potential crash

19.12.0:
  * wxMaxima now uses C++11 that makes the code more readable and helps
	finding bugs
  * If found wxMaxima now asks cppcheck to find bugs
  * Increased the speed of the program again
  * Opening the config dialogue since 19.11.0 unchecked "offer known answers"
  * For Cmake>=3.10.0 the build system now asks cppcheck to find bugs.
  * Changing the worksheet style was partially broken.
  * A big number of additional bug fixes in various places
  * A config option that forces displaying all multiplication signs.

19.11.1:
  * Improved italian translation by Marco Ciampa
  * Autocompletion no more causes asserts
  * A better logic that decides which cell to send to maxima
  * wxMaxima now supports "-l", "-u" and "-X" command-line args like maxima
  * The help files now are installed in the Right Place
  * Many additional small bug fixes

19.11.0:
  * Chinese translation updates from liulitchi
  * Turkish translation updates from TufanSirin
  * Hungarian translation updates from Blahota István
  * German translation updates from Wolfgang Dautermann and Gunter Königsmann
  * Better detection of the Gnuplot location
  * Better detection of the right place to open autocomplete popups in
  * Better formatting of special unicode operators
  * If autosave on closing fails: Allow the user to ask to exit anyway
  * Enable Autosave even if the option to keep the file saved is disabled
  * A context menu with the "display labels" choices
  * A context menu with "max number of digits" choices
  * A speedup by preventing recursive calls to resize functions
  * Corrected parametric plots in the plot wizard