@@ -60,8 +60,8 @@
 	  <li>Made the tooltips more visible</li>
 	  <li>Added a warning tooltip about missing multiplication signs</li>
 	  <li>Sped up drawing of new cells correcting the size calculations</li>
-	  <li>If lookalike chars are used in a way that can cause hard-to-find errors now a
-   warning tooltip is generated</li>
+	  <li>Warn if lookalike chars are used</li>
+	  <li>An option to turn all multiplication dots on</li>
 	  <li>A few additional bug fixes that (besides others) resolve a potential crash</li>
         </ul>
     </description>
