@@ -5,6 +5,7 @@
  * If lookalike chars are used in a way that can cause hard-to-find errors now a
    warning tooltip is generated
  * A few additional bug fixes that (besides others) resolve a potential crash
+ * An option to turn all multiplication dots on
 
 19.12.0:
   * wxMaxima now uses C++11 that makes the code more readable and helps
